--- a/config.yml
+++ b/config.yml
@@ -5,10 +5,24 @@ dataloader:
   batch_size: 64
   shuffle: True
   num_workers: 6
+models:
+  lstm:
+    sequence_len: 7499
+    embedding_dim: 30
+    hidden_dim: 1000
+    num_layer: 3
+    out_dims:
+      - 1
+      - 1
+      - 1
+      - 32
+    out_types:
+      - 'regression'
+      - 'regression'
+      - 'regression'
+      - 'classification'
 training:
   epochs: 100
-  embedding_dim: 30
-  hidden_dim : 1000
-  num_layer : 3
-  learning_rate : 0.01
-  out_dim : 2
+  learning_rate: 0.01
+  momentum: 0.9
+  l2: 0
