--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 data: '/rap/jvb-000-aa/COURS2019/etudiants/data/omsignal/myHeartProject/'
 preprocessing:
-  noise_gain: 1
+  noise_gain: 0.2
 dataloader:
   batch_size: 64
   shuffle: True
@@ -8,9 +8,9 @@ dataloader:
 models:
   lstm:
     sequence_len: 7499
-    embedding_dim: 30
     hidden_dim: 1000
-    num_layer: 3
+    num_layers: 3
+    dropout: 0.2
     out_dims:
       - 1
       - 1
@@ -22,7 +22,7 @@ models:
       - 'regression'
       - 'classification'
 training:
-  epochs: 100
+  epochs: 1000
   learning_rate: 0.01
   momentum: 0.9
   l2: 0
