added new settings for new architectures (which deals with timeseries and the spectra seperately)

--- a/config.yml
+++ b/config.yml
@@ -7,8 +7,9 @@ dataloader:
   num_workers: 6
 models:
   lstm:
-    sequence_len: 7499
-    hidden_dim: 1000
+    ts_len: 3749
+    spec_len: 3750
+    hid_dim: 1000
     num_layers: 3
     dropout: 0.2
     out_dims:
@@ -23,6 +24,6 @@ models:
       - 'classification'
 training:
   epochs: 1000
-  learning_rate: 0.01
+  learning_rate: 0.001
   momentum: 0.9
   l2: 0
