--- a/config.yml
+++ b/config.yml
@@ -1,29 +1,29 @@
 data: '/rap/jvb-000-aa/COURS2019/etudiants/data/omsignal/myHeartProject/'
 preprocessing:
-  noise_gain: 0.2
+  noise_gain: 0.5
 dataloader:
+  test_proportion: 0.5
   batch_size: 64
   shuffle: True
   num_workers: 6
 models:
   lstm:
-    ts_len: 3749
-    spec_len: 129
-    hid_dim: 3500
-    num_layers: 3
-    dropout: 0.2
+    ts_len: 3750
+    spec_len: 1876
+    hid_dim: 1000
+    num_layers: 10
     out_dims:
       - 1
       - 1
       - 1
       - 32
-    out_types:
-      - 'regression'
-      - 'regression'
-      - 'regression'
-      - 'classification'
 training:
-  epochs: 1000
-  learning_rate: 0.0001
+  epochs: 100
+  learning_rate: 0.01
   momentum: 0.9
   l2: 0
+  loss_weights:
+    - 0
+    - 0
+    - 0
+    - 1
