--- a/config.yml
+++ b/config.yml
@@ -1,17 +1,17 @@
 data: '/rap/jvb-000-aa/COURS2019/etudiants/data/omsignal/myHeartProject/'
 preprocessing:
-  noise_gain: 0.5
+  noise_gain: 0.25
 dataloader:
   test_proportion: 0.5
   batch_size: 64
   shuffle: True
   num_workers: 6
 models:
-  lstm:
+  tspec:
     ts_len: 3750
     spec_len: 1876
-    hid_dim: 1000
-    num_layers: 10
+    hid_dim: 100
+    num_layers: 3
     out_dims:
       - 1
       - 1
@@ -23,7 +23,7 @@ training:
   momentum: 0.9
   l2: 0
   loss_weights:
-    - 0
-    - 0
-    - 0
+    - 0.1
+    - 0.05
+    - 0.25
     - 1
