major code refactor allows us to re-use the evaluation loop for the test dataset. we now save the best model (according to the validation error), and employ early stopping (see patience options in config.yml). the train_model function (which calls train_loop and evalu_loop over n epochs) now returns results including performance over time and the best model.

--- a/config.yml
+++ b/config.yml
@@ -18,7 +18,9 @@ models:
       - 1
       - 32
 training:
-  epochs: 1000
+  schedule_patience: 20
+  early_stopping_patience: 100
+  epochs: 10
   learning_rate: 0.01
   momentum: 0.9
   l2: 0.01
